--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,95 +1,96 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>FlapperNews</title>
-   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= stylesheet_link_tag    '/assets/app.js', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body ng-app="flapperNews">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <ui-view></ui-view>
-    </div>
-  </div>
-
-  <script type="text/ng-template" id="/home.html">
-    <div class="page-header">
-      <h1>Flapper News</h1>
-    </div>
-
-    <div ng-repeat="post in posts | orderBy:'-upvotes'">
-      <span class="glyphicon glyphicon-thumbs-up"
-        ng-click="incrementUpvotes(post)"></span>
-      {{post.upvotes}}
-      <span style="font-size:20px; margin-left:10px;">
-        <a ng-show="post.link" href="{{post.link}}">
-          {{post.title}}
-        </a>
-        <span ng-hide="post.link">
-          {{post.title}}
-        </span>
-      </span>
-      <span>
-        <a href="#/posts/{{$index}}">Comments</a>
-      </span>
-    </div>
-
-    <form ng-submit="addPost()"
-      style="margin-top:30px;">
-      <h3>Add a new post</h3>
-
-      <div class="form-group">
-        <input type="text"
-        class="form-control"
-        placeholder="Title"
-        ng-model="title"></input>
+  <head>
+    <title>FlapperNews</title>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag    '/assets/app.js', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body ng-app="flapperNews">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div ng-include="'nav/_nav.html'"></div>
+        <ui-view></ui-view>
       </div>
-      <div class="form-group">
-        <input type="text"
-        class="form-control"
-        placeholder="Link"
-        ng-model="link"></input>
-      </div>
-      <button type="submit" class="btn btn-primary">Post</button>
-    </form>
-  </script>
-
-  <script type="text/ng-template" id="/posts.html">
-    <div class="page-header">
-      <h3>
-        <a ng-show="post.link" href="{{post.link}}">
-          {{post.title}}
-        </a>
-        <span ng-hide="post.link">
-          {{post.title}}
-        </span>
-      </h3>
     </div>
 
-    <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-      <span class="glyphicon glyphicon-thumbs-up"
-        ng-click="incrementUpvotes(comment)"></span>
-      {{comment.upvotes}} - by {{comment.author}}
-      <span style="font-size:20px; margin-left:10px;">
-        {{comment.body}}
-      </span>
-    </div>
-    <form ng-submit="addComment()"
-      style="margin-top:30px;">
-      <h3>Add a new comment</h3>
-
-      <div class="form-group">
-        <input type="text"
-        class="form-control"
-        placeholder="Comment"
-        ng-model="body"></input>
+    <script type="text/ng-template" id="/home.html">
+      <div class="page-header">
+        <h1>Sample App</h1>
       </div>
-      <button type="submit" class="btn btn-primary">Post</button>
-    </form>
 
-  </script>
+      <table class="table table-striped">
+        <tbody ng-repeat="post in posts | orderBy:'-upvotes'">
+          <tr><td>
+              <span class="glyphicon glyphicon-thumbs-up"
+                    ng-click="incrementUpvotes(post)"></span>
+              {{post.upvotes}}</td>
+            <td><span style="font-size:20px; margin-left:10px;">
+                <a ng-show="post.link" href="{{post.link}}">
+                  {{post.title}}
+                </a></td>
+            <td><span ng-hide="post.link">
+                {{post.title}}
+              </span>
+              posted by <a ng-href="#/users/{{post.user.username}}">{{post.user.username}}</a>
+              </span></td>
+            <td>
+              <span>
+                <a href="#/posts/{{post.id}}" class="btn btn-primary">Comments</a>
+              </span></td></tr>
+        </tbody>
+      </table>
 
-</body>
+      <form ng-submit="addPost()" style="margin-top:30px;">
+        <h3>Add a new post</h3>
+
+        <div class="form-group">
+          <input type="text"  class="form-control"  placeholder="Title" ng-model="title"></input>
+        </div>
+        <div class="form-group">
+          <input type="text"  class="form-control"  placeholder="Link"  ng-model="link"></input>
+        </div>
+        <button type="submit" class="btn btn-primary">Post</button>
+      </form>
+    </script>
+
+    <script type="text/ng-template" id="/posts.html">
+      <div class="page-header">
+        <h3>
+          <a ng-show="post.link" href="{{post.link}}">
+            {{post.title}}
+          </a>
+          <span ng-hide="post.link">
+            {{post.title}}
+          </span>
+        </h3>
+      </div>
+
+      <table class="table table-striped">
+        <tbody ng-repeat="comment in post.comments | orderBy:'-upvotes'">
+          <tr><td><span class="glyphicon glyphicon-thumbs-up"  ng-click="incrementUpvotes(comment)"></span>
+              {{comment.upvotes}} - by {{comment.author}}
+              <span style="font-size:20px; margin-left:10px;">
+                {{comment.body}}
+              </span></td>
+            <td>
+              <span ng-show="comment.user.username">
+                by {{comment.user.username}}
+              </span></td></tr>
+        </tbody>
+      </table>
+      <form ng-submit="addComment()"
+            style="margin-top:30px;">
+        <h3>Add a new comment</h3>
+
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Comment" ng-model="body"></input>
+        </div>
+        <button type="submit" class="btn btn-primary">Post</button>
+      </form>
+
+    </script>
+
+  </body>
 </html>
